[package]
name = "todoln"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
rusqlite = { version = "0.30.0", features = ["bundled"] }